* clear float box if next block falls outside of float group (#2596)
* resolve fonts relative to theme dir before GEM_FONTS_DIR if `pdf-fontsdir` not specified (#2349)
* add see and see-also associations on index terms to index (#2527)
* upgrade prawn-svg to 0.38.x (#2604)
* bypass any dry run logic if remaining height on page is less than heading font size

Bug Fixes::

* always force NULL character to have 0 width, even if missing from font (#2585)
* correctly map all icons from FontAwesome 4 (#2373)
* resolve remote image in document title or section title with autogenerated ID
* keep caret between items in menu macro with previous item if items wrap
* don't include children of section with empty title in TOC
* don't include children of section with empty title in outline
* only load Treetop runtime so it does not overload `require` method
* fix collation order of index terms that differ only in case
* don't crash if page background image value is empty (interpret as "none")
* prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
* remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)
* major improvement to OTF support following release of ttfunk 1.8.0 (automatic transitive dependency of prawn)
* don't drop line in running content if attribute reference resolves to text that contains attribute reference (not originally present)
* respect hide-uri-scheme when appending URL to link text when media is print or prepress (#2583)
* correctly calculate extent for block in columns that starts below doctitle (#2579)
* support internal link on image (value of link attribute starts with #) (#2572)
* don't orphan section with unbreakable option that spans page boundary (#2608)
* correctly track start page number of section title that self-advances when section is breakable (#2609)